<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#8CC4F1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        android:layout_margin="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage2"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        android:hint="@string/user_name"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/etUserName"
            android:textColor="@color/black"
            android:inputType="textNoSuggestions|text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="20dp"
            />
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:buttonTint="#2196F3"
            android:buttonTintMode="multiply"
            android:text="@string/male"
            android:textSize="18sp"
            android:layout_marginEnd="20dp"/>

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:buttonTint="#2196F3"
            android:buttonTintMode="multiply"
            android:textSize="18sp"
            android:text="@string/female"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnSaveProfile"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="#2196F3"
        android:text="@string/save"
        android:textAllCaps="true" />
</LinearLayout>