<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8CC4F1"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_login_to_continue_this_app"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etEmailAddress"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/etPassword"
                android:textColor="@color/black"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#2196F3"
            android:text="@string/login"
            android:textAllCaps="true"/>
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="15dp"
            android:text="@string/dont_have_an_account_signup"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>