<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.QuestionActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBar"
        android:backgroundTint="#2196F3"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        android:layout_alignParentTop="true"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".8"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/optionList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/description"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

            <Button
                android:id="@+id/btnPrevious"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:visibility="invisible"
                android:backgroundTint="#2196F3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <Button
            android:id="@+id/btnNext"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:backgroundTint="#2196F3"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/next"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.50" />
        <Button
            android:id="@+id/btnSubmit"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="0dp"
            android:backgroundTint="#2196F3"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/submit"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.50" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>